# apps/api/src/auth/services/ability/ability.service.ts
@@ -28,7 +28,7 @@ export class AbilityService {
       { action: "create", subject: "VerificationEmail", conditions: { id: "${user.id}" } },
       { action: "manage", subject: "DeploymentSetting", conditions: { userId: "${user.id}" } },
       { action: "manage", subject: "Alert", conditions: { userId: "${user.id}" } },
-      { action: "manage", subject: "ContactPoint", conditions: { userId: "${user.id}" } }
+      { action: "manage", subject: "NotificationChannel", conditions: { userId: "${user.id}" } }
     ],
     REGULAR_PAYING_USER: [
       { action: ["create", "read", "sign"], subject: "UserWallet", conditions: { userId: "${user.id}" } },
@@ -38,7 +38,7 @@ export class AbilityService {
       { action: "manage", subject: "DeploymentSetting", conditions: { userId: "${user.id}" } },
       { action: "manage", subject: "ApiKey", conditions: { userId: "${user.id}" } },
       { action: "manage", subject: "Alert", conditions: { userId: "${user.id}" } },
-      { action: "manage", subject: "ContactPoint", conditions: { userId: "${user.id}" } }
+      { action: "manage", subject: "NotificationChannel", conditions: { userId: "${user.id}" } }
     ],
     SUPER_USER: [{ action: "manage", subject: "all" }]
   };
