# apps/notifications/src/modules/notifications/dto/NotificationCommand.dto.ts
@@ -2,7 +2,7 @@ import { createZodDto } from "nestjs-zod";
 import { z } from "zod";
 
 const NotificationCommandSchema = z.object({
-  contactPointId: z.string(),
+  notificationChannelId: z.string(),
   payload: z.object({
     summary: z.string(),
     description: z.string()
